// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package protobuf_unittest;
enum GeneratedSwiftReservedEnum {
  NONE = 0;
  adjusted = 1;
  any = 2;
  AnyExtensionField = 3;
  AnyMessageExtension = 4;
  AnyMessageStorage = 5;
  AnyUnpackError = 6;
  Api = 7;
  appended = 8;
  appendUIntHex = 9;
  appendUnknown = 10;
  areAllInitialized = 11;
  array = 12;
  arrayLiteral = 13;
  arraySeparator = 14;
  as = 15;
  asciiOpenCurlyBracket = 16;
  asciiZero = 17;
  available = 18;
  b = 19;
  BaseType = 20;
  binary = 21;
  BinaryDecoder = 22;
  BinaryDecodingError = 23;
  BinaryDecodingOptions = 24;
  BinaryEncoder = 25;
  BinaryEncodingError = 26;
  BinaryEncodingMessageSetSizeVisitor = 27;
  BinaryEncodingMessageSetVisitor = 28;
  BinaryEncodingSizeVisitor = 29;
  BinaryEncodingVisitor = 30;
  bodySize = 31;
  Bool = 32;
  booleanLiteral = 33;
  BooleanLiteralType = 34;
  boolValue = 35;
  buffer = 36;
  bytes = 37;
  bytesInGroup = 38;
  BytesValue = 39;
  c = 40;
  capitalizeNext = 41;
  cardinality = 42;
  Character = 43;
  characters = 44;
  chars = 45;
  class = 46;
  clearExtensionValue = 47;
  clearSourceContext = 48;
  clearValue = 49;
  codeUnits = 50;
  Collection = 51;
  contentsOf = 52;
  count = 53;
  customCodable = 54;
  CustomDebugStringConvertible = 55;
  d = 56;
  Data = 57;
  dataPointer = 58;
  dataResult = 59;
  dataSize = 60;
  date = 61;
  daySec = 62;
  daysSinceEpoch = 63;
  debugDescription = 64;
  decoded = 65;
  decodedFromJSONNull = 66;
  decodeExtensionField = 67;
  decodeExtensionFieldsAsMessageSet = 68;
  decodeJSON = 69;
  decodeMapField = 70;
  decodeMessage = 71;
  decoder = 72;
  decodeRepeated = 73;
  decodeRepeatedBoolField = 74;
  decodeRepeatedBytesField = 75;
  decodeRepeatedDoubleField = 76;
  decodeRepeatedEnumField = 77;
  decodeRepeatedFixed32Field = 78;
  decodeRepeatedFixed64Field = 79;
  decodeRepeatedFloatField = 80;
  decodeRepeatedGroupField = 81;
  decodeRepeatedInt32Field = 82;
  decodeRepeatedInt64Field = 83;
  decodeRepeatedMessageField = 84;
  decodeRepeatedSFixed32Field = 85;
  decodeRepeatedSFixed64Field = 86;
  decodeRepeatedSInt32Field = 87;
  decodeRepeatedSInt64Field = 88;
  decodeRepeatedStringField = 89;
  decodeRepeatedUInt32Field = 90;
  decodeRepeatedUInt64Field = 91;
  decodeSingular = 92;
  decodeSingularBoolField = 93;
  decodeSingularBytesField = 94;
  decodeSingularDoubleField = 95;
  decodeSingularEnumField = 96;
  decodeSingularFixed32Field = 97;
  decodeSingularFixed64Field = 98;
  decodeSingularFloatField = 99;
  decodeSingularGroupField = 100;
  decodeSingularInt32Field = 101;
  decodeSingularInt64Field = 102;
  decodeSingularMessageField = 103;
  decodeSingularSFixed32Field = 104;
  decodeSingularSFixed64Field = 105;
  decodeSingularSInt32Field = 106;
  decodeSingularSInt64Field = 107;
  decodeSingularStringField = 108;
  decodeSingularUInt32Field = 109;
  decodeSingularUInt64Field = 110;
  decodeTextFormat = 111;
  defaultValue = 112;
  description = 113;
  Dictionary = 114;
  dictionaryLiteral = 115;
  digit = 116;
  digit0 = 117;
  digit1 = 118;
  digitCount = 119;
  digits = 120;
  digitValue = 121;
  discardableResult = 122;
  discardUnknownFields = 123;
  distance = 124;
  double = 125;
  doubleToUtf8 = 126;
  DoubleValue = 127;
  Duration = 128;
  E = 129;
  Element = 130;
  elements = 131;
  emitExtensionFieldName = 132;
  emitFieldName = 133;
  emitFieldNumber = 134;
  Empty = 135;
  emptyData = 136;
  encoded = 137;
  encodedJSONString = 138;
  encodedSize = 139;
  encodeField = 140;
  encoder = 141;
  end = 142;
  endArray = 143;
  endMessageField = 144;
  endObject = 145;
  endRegularField = 146;
  enum = 147;
  enumvalue = 148;
  Equatable = 149;
  Error = 150;
  ExpressibleByArrayLiteral = 151;
  ExpressibleByDictionaryLiteral = 152;
  ext = 153;
  extDecoder = 154;
  extendedGraphemeClusterLiteral = 155;
  ExtendedGraphemeClusterLiteralType = 156;
  ExtensibleMessage = 157;
  extension = 158;
  ExtensionField = 159;
  extensionFieldNumber = 160;
  ExtensionFieldValueSet = 161;
  ExtensionMap = 162;
  extensions = 163;
  extras = 164;
  f = 165;
  false = 166;
  field = 167;
  fieldData = 168;
  FieldMask = 169;
  fieldName = 170;
  fieldNameCount = 171;
  fieldNum = 172;
  fieldNumber = 173;
  fieldNumberForProto = 174;
  fields = 175;
  fieldSize = 176;
  FieldTag = 177;
  fieldType = 178;
  fieldValue = 179;
  fileName = 180;
  filter = 181;
  firstItem = 182;
  float = 183;
  floatLiteral = 184;
  FloatLiteralType = 185;
  floatToUtf8 = 186;
  FloatValue = 187;
  forMessageName = 188;
  formUnion = 189;
  forReadingFrom = 190;
  forTypeURL = 191;
  ForwardParser = 192;
  forWritingInto = 193;
  from = 194;
  fromAscii2 = 195;
  fromAscii4 = 196;
  fromHexDigit = 197;
  func = 198;
  G = 199;
  get = 200;
  getExtensionValue = 201;
  Google_Protobuf_Any = 202;
  Google_Protobuf_Api = 203;
  Google_Protobuf_BoolValue = 204;
  Google_Protobuf_BytesValue = 205;
  Google_Protobuf_DoubleValue = 206;
  Google_Protobuf_Duration = 207;
  Google_Protobuf_Empty = 208;
  Google_Protobuf_Enum = 209;
  Google_Protobuf_EnumValue = 210;
  Google_Protobuf_Field = 211;
  Google_Protobuf_FieldMask = 212;
  Google_Protobuf_FloatValue = 213;
  Google_Protobuf_Int32Value = 214;
  Google_Protobuf_Int64Value = 215;
  Google_Protobuf_ListValue = 216;
  Google_Protobuf_Method = 217;
  Google_Protobuf_Mixin = 218;
  Google_Protobuf_NullValue = 219;
  Google_Protobuf_Option = 220;
  Google_Protobuf_SourceContext = 221;
  Google_Protobuf_StringValue = 222;
  Google_Protobuf_Struct = 223;
  Google_Protobuf_Syntax = 224;
  Google_Protobuf_Timestamp = 225;
  Google_Protobuf_Type = 226;
  Google_Protobuf_UInt32Value = 227;
  Google_Protobuf_UInt64Value = 228;
  Google_Protobuf_Value = 229;
  group = 230;
  groupSize = 231;
  h = 232;
  handleConflictingOneOf = 233;
  hasExtensionValue = 234;
  hash = 235;
  Hashable = 236;
  hashValue = 237;
  HashVisitor = 238;
  hasSourceContext = 239;
  hasValue = 240;
  hour = 241;
  i = 242;
  index = 243;
  init = 244;
  inout = 245;
  insert = 246;
  Int = 247;
  Int32 = 248;
  Int32Value = 249;
  Int64 = 250;
  Int64Value = 251;
  Int8 = 252;
  integerLiteral = 253;
  IntegerLiteralType = 254;
  intern = 255;
  Internal = 256;
  InternalState = 257;
  isA = 258;
  isEqual = 259;
  isEqualTo = 260;
  isInitialized = 261;
  it = 262;
  itemTagsEncodedSize = 263;
  Iterator = 264;
  i_2166136261 = 265;
  JSONDecoder = 266;
  JSONDecodingError = 267;
  JSONDecodingOptions = 268;
  jsonEncoder = 269;
  JSONEncodingError = 270;
  JSONEncodingVisitor = 271;
  JSONMapEncodingVisitor = 272;
  jsonName = 273;
  jsonPath = 274;
  jsonPaths = 275;
  JSONScanner = 276;
  jsonString = 277;
  jsonText = 278;
  jsonUTF8Data = 279;
  k = 280;
  Key = 281;
  keyField = 282;
  KeyType = 283;
  kind = 284;
  l = 285;
  length = 286;
  let = 287;
  lhs = 288;
  list = 289;
  listOfMessages = 290;
  listValue = 291;
  littleEndian = 292;
  littleEndianBytes = 293;
  M = 294;
  major = 295;
  makeIterator = 296;
  mapHash = 297;
  MapKeyType = 298;
  mapNameResolver = 299;
  mapToMessages = 300;
  MapValueType = 301;
  mapVisitor = 302;
  mdayStart = 303;
  merge = 304;
  message = 305;
  messageDepthLimit = 306;
  MessageExtension = 307;
  MessageImplementationBase = 308;
  MessageSet = 309;
  messageType = 310;
  Method = 311;
  methods = 312;
  minor = 313;
  Mixin = 314;
  mixins = 315;
  month = 316;
  msgExtension = 317;
  mutating = 318;
  n = 319;
  name = 320;
  NameDescription = 321;
  NameMap = 322;
  nameResolver = 323;
  names = 324;
  nanos = 325;
  nativeBytes = 326;
  nativeEndianBytes = 327;
  newL = 328;
  newList = 329;
  newValue = 330;
  nextFieldNumber = 331;
  nil = 332;
  nilLiteral = 333;
  nullValue = 334;
  number = 335;
  numberValue = 336;
  of = 337;
  oneofIndex = 338;
  oneofs = 339;
  OneOf_Kind = 340;
  Option = 341;
  OptionalEnumExtensionField = 342;
  OptionalExtensionField = 343;
  OptionalGroupExtensionField = 344;
  OptionalMessageExtensionField = 345;
  options = 346;
  other = 347;
  others = 348;
  out = 349;
  output = 350;
  p = 351;
  packed = 352;
  PackedEnumExtensionField = 353;
  PackedExtensionField = 354;
  packedSize = 355;
  padding = 356;
  parent = 357;
  partial = 358;
  path = 359;
  paths = 360;
  payload = 361;
  payloadSize = 362;
  pointer = 363;
  pos = 364;
  prefix = 365;
  preTraverse = 366;
  proto2 = 367;
  proto3DefaultValue = 368;
  ProtobufAPIVersionCheck = 369;
  ProtobufAPIVersion_2 = 370;
  ProtobufBool = 371;
  ProtobufBytes = 372;
  ProtobufDouble = 373;
  ProtobufEnumMap = 374;
  protobufExtension = 375;
  ProtobufFixed32 = 376;
  ProtobufFixed64 = 377;
  ProtobufFloat = 378;
  ProtobufInt32 = 379;
  ProtobufInt64 = 380;
  ProtobufMap = 381;
  ProtobufMessageMap = 382;
  ProtobufSFixed32 = 383;
  ProtobufSFixed64 = 384;
  ProtobufSInt32 = 385;
  ProtobufSInt64 = 386;
  ProtobufString = 387;
  ProtobufUInt32 = 388;
  ProtobufUInt64 = 389;
  protobuf_extensionFieldValues = 390;
  protobuf_fieldNumber = 391;
  protobuf_generated_isEqualTo = 392;
  protobuf_nameMap = 393;
  protobuf_newField = 394;
  protobuf_package = 395;
  protocol = 396;
  protoFieldName = 397;
  protoMessageName = 398;
  ProtoNameProviding = 399;
  protoPaths = 400;
  public = 401;
  putBoolValue = 402;
  putBytesValue = 403;
  putDoubleValue = 404;
  putEnumValue = 405;
  putFixedUInt32 = 406;
  putFixedUInt64 = 407;
  putFloatValue = 408;
  putInt64 = 409;
  putStringValue = 410;
  putUInt64 = 411;
  putUInt64Hex = 412;
  putVarInt = 413;
  putZigZagVarInt = 414;
  rawChars = 415;
  RawRepresentable = 416;
  RawValue = 417;
  register = 418;
  RepeatedEnumExtensionField = 419;
  RepeatedExtensionField = 420;
  RepeatedGroupExtensionField = 421;
  RepeatedMessageExtensionField = 422;
  requestStreaming = 423;
  requestTypeURL = 424;
  requiredSize = 425;
  responseStreaming = 426;
  responseTypeURL = 427;
  result = 428;
  return = 429;
  revision = 430;
  rhs = 431;
  root = 432;
  s = 433;
  sawBackslash = 434;
  scanner = 435;
  seconds = 436;
  self = 437;
  separator = 438;
  serializedData = 439;
  serializedSize = 440;
  set = 441;
  setExtensionValue = 442;
  shift = 443;
  SimpleExtensionMap = 444;
  sizer = 445;
  source = 446;
  sourceContext = 447;
  sourceEncoding = 448;
  split = 449;
  start = 450;
  startArray = 451;
  startField = 452;
  startIndex = 453;
  startMessageField = 454;
  startObject = 455;
  startRegularField = 456;
  state = 457;
  static = 458;
  StaticString = 459;
  storage = 460;
  String = 461;
  stringLiteral = 462;
  StringLiteralType = 463;
  stringResult = 464;
  stringValue = 465;
  struct = 466;
  structValue = 467;
  subDecoder = 468;
  subscript = 469;
  subVisitor = 470;
  SwiftProtobuf = 471;
  syntax = 472;
  T = 473;
  tag = 474;
  terminator = 475;
  testDecoder = 476;
  text = 477;
  textDecoder = 478;
  TextFormatDecoder = 479;
  TextFormatDecodingError = 480;
  TextFormatEncodingVisitor = 481;
  textFormatString = 482;
  throws = 483;
  timeInterval = 484;
  timeIntervalSince1970 = 485;
  timeIntervalSinceReferenceDate = 486;
  Timestamp = 487;
  total = 488;
  traverse = 489;
  true = 490;
  try = 491;
  type = 492;
  typealias = 493;
  typePrefix = 494;
  typeStart = 495;
  typeUnknown = 496;
  typeURL = 497;
  UInt32 = 498;
  UInt32Value = 499;
  UInt64 = 500;
  UInt64Value = 501;
  UInt8 = 502;
  unicodeScalarLiteral = 503;
  UnicodeScalarLiteralType = 504;
  unicodeScalars = 505;
  UnicodeScalarView = 506;
  union = 507;
  unknown = 508;
  unknownFields = 509;
  UnknownStorage = 510;
  unpackTo = 511;
  UnsafeBufferPointer = 512;
  UnsafeMutablePointer = 513;
  UnsafePointer = 514;
  updatedOptions = 515;
  url = 516;
  utf8 = 517;
  utf8Codec = 518;
  utf8ToDouble = 519;
  UTF8View = 520;
  v = 521;
  value = 522;
  valueField = 523;
  values = 524;
  ValueType = 525;
  var = 526;
  Version = 527;
  versionString = 528;
  visitExtensionFields = 529;
  visitExtensionFieldsAsMessageSet = 530;
  visitMapField = 531;
  visitor = 532;
  visitPacked = 533;
  visitPackedBoolField = 534;
  visitPackedDoubleField = 535;
  visitPackedEnumField = 536;
  visitPackedFixed32Field = 537;
  visitPackedFixed64Field = 538;
  visitPackedFloatField = 539;
  visitPackedInt32Field = 540;
  visitPackedInt64Field = 541;
  visitPackedSFixed32Field = 542;
  visitPackedSFixed64Field = 543;
  visitPackedSInt32Field = 544;
  visitPackedSInt64Field = 545;
  visitPackedUInt32Field = 546;
  visitPackedUInt64Field = 547;
  visitRepeated = 548;
  visitRepeatedBoolField = 549;
  visitRepeatedBytesField = 550;
  visitRepeatedDoubleField = 551;
  visitRepeatedEnumField = 552;
  visitRepeatedFixed32Field = 553;
  visitRepeatedFixed64Field = 554;
  visitRepeatedFloatField = 555;
  visitRepeatedGroupField = 556;
  visitRepeatedInt32Field = 557;
  visitRepeatedInt64Field = 558;
  visitRepeatedMessageField = 559;
  visitRepeatedSFixed32Field = 560;
  visitRepeatedSFixed64Field = 561;
  visitRepeatedSInt32Field = 562;
  visitRepeatedSInt64Field = 563;
  visitRepeatedStringField = 564;
  visitRepeatedUInt32Field = 565;
  visitRepeatedUInt64Field = 566;
  visitSingular = 567;
  visitSingularBoolField = 568;
  visitSingularBytesField = 569;
  visitSingularDoubleField = 570;
  visitSingularEnumField = 571;
  visitSingularFixed32Field = 572;
  visitSingularFixed64Field = 573;
  visitSingularFloatField = 574;
  visitSingularGroupField = 575;
  visitSingularInt32Field = 576;
  visitSingularInt64Field = 577;
  visitSingularMessageField = 578;
  visitSingularSFixed32Field = 579;
  visitSingularSFixed64Field = 580;
  visitSingularSInt32Field = 581;
  visitSingularSInt64Field = 582;
  visitSingularStringField = 583;
  visitSingularUInt32Field = 584;
  visitSingularUInt64Field = 585;
  visitUnknown = 586;
  wasDecoded = 587;
  where = 588;
  wireFormat = 589;
  with = 590;
  WrappedType = 591;
  yday = 592;
}
